--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,6 +11,33 @@
 </head>
 <body>
   <h1>Bucket List</h1>
-
+  <div class="wrapper">
+    <div>
+      <h2>Add to the Bucket List</h2>
+      <form id="toDo-form">
+        <div>
+          <label for="activity">Activity:</label>
+          <input type="text" id="activity"/>
+        </div>
+        <div>
+          <label for="location">Location:</label>
+          <input type="text" id="location"/>
+        </div>
+        <div>
+          <label for="cost">Cost:</label>
+          <input type="number" id="cost"/>
+        </div>
+        <div>
+          <label for="date">Date By:</label>
+          <input type="date" id="date"/>
+        </div>
+        <input type="submit" value="Save" id="save"/>
+      </form>
+    </div>
+    <div>
+      <h2>To Do</h2>
+      <div id="toDo"></div>
+    </div>
+  </div>
 </body>
 </html>
