--- a/client/public/index.html
+++ b/client/public/index.html
@@ -36,7 +36,7 @@
     </div>
     <div>
       <h2>To Do</h2>
-      <div id="toDo"></div>
+      <div id="toDos"></div>
     </div>
   </div>
 </body>
