--- a/client/public/index.html
+++ b/client/public/index.html
@@ -31,6 +31,23 @@
           <label for="date">Date By:</label>
           <input type="date" id="date"/>
         </div>
+
+        <div>
+          <label for="completed">Completed:</label>
+          <input type="text" id="completed">
+        </div>
+<!--
+        <div class = "form-experience" id="form-experience">
+          <p>Completed?</p>
+          <input type="radio" id="completed"
+          name="Completed" value="Completed"/>
+          <label for="Completed">Completed</label>
+
+          <input type="radio" id="incomplete"
+          name="Incomplete" value="Incomplete"/>
+          <label for="Incomplete">Incomplete</label>
+        </div> -->
+
         <input type="submit" value="Save" id="save"/>
       </form>
     </div>
